Fix scaling overflow

--- a/front/src/App.scss
+++ b/front/src/App.scss
@@ -16,6 +16,7 @@
     align-items: center;
     justify-content: center;
     padding: 100px 0;
+    width: 90%;
 
     .results{
       margin-top: 20px;
