--- a/front/src/components/searchBar/index.scss
+++ b/front/src/components/searchBar/index.scss
@@ -1,5 +1,6 @@
 .Search {
-  width: 584px;
+  max-width: 584px;
+  width: 100%;
   background: #fff;
   display: flex;
   border: 1px solid #dfe1e5;
